refactored most of the code, added mappers