@@ -3,13 +3,12 @@ package pl.luki2183.farmManager.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import pl.luki2183.farmManager.dto.FieldDto;
+import pl.luki2183.farmManager.dto.GeoJSONDto;
 import pl.luki2183.farmManager.entity.FieldEntity;
 import pl.luki2183.farmManager.entity.PointEntity;
 import pl.luki2183.farmManager.repo.FieldRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,19 +16,20 @@ public class FieldService {
 
     private final FieldRepository repository;
 
-    public FieldEntity saveField(FieldDto fieldDto){
+    public FieldEntity saveField(GeoJSONDto dto){
         FieldEntity entity = new FieldEntity();
+//todo refactor to mapper
+        entity.setId(dto.getId());
 
-        entity.setId(fieldDto.getId());
-
-        entity.setCoordinates(fieldDto.getCoordinates().stream()
-                .map(pointDto -> {
-                    PointEntity pointEntity = new PointEntity();
-                    pointEntity.setLat(pointDto.getLat());
-                    pointEntity.setLng(pointDto.getLng());
-                    return pointEntity;
-                })
-                .collect(Collectors.toList()));
+        entity.setCoordinates(
+                dto.getGeometry().getCoordinates().getFirst().stream()
+                        .map(doubles -> {
+                            PointEntity result = new PointEntity();
+                            result.setLat(doubles[0]);
+                            result.setLng(doubles[1]);
+                            return result;
+                        }).toList()
+        );
 
         return repository.save(entity);
     }
